--- a/index.html
+++ b/index.html
@@ -13,25 +13,27 @@
             <input type="text" id="playerA" required>
             <label for="playerB">Spieler B:</label>
             <input for="text" id="playerB" required>
+            <label for="botCheckBox" id="botCheckBoxLable">Computer</label>
+            <input id="botCheckBox" type="checkbox" onclick="checkBot()"></input>
             <button onclick="start()" class="clickButton">Spiel starten</button>
         </div>
         <div id="gameScreen" style="display:none;">
             <button onclick="newGame()" class="clickButton">Neues Spiel</button>
             <table class="board">
                 <tr>
-                    <td><button class="gameButton" onclick="move(this, 0, 0)"></button></td>
-                    <td><button class="gameButton" onclick="move(this, 0, 1)"></button></td>
-                    <td><button class="gameButton" onclick="move(this, 0, 2)"></button></td>
+                    <td><button class="gameButton" onclick="move(this, 0, 0)" id="button1"></button></td>
+                    <td><button class="gameButton" onclick="move(this, 0, 1)" id="button2"></button></td>
+                    <td><button class="gameButton" onclick="move(this, 0, 2)" id="button3"></button></td>
                 </tr>
                 <tr>
-                    <td><button class="gameButton" onclick="move(this, 1, 0)"></button></td>
-                    <td><button class="gameButton" onclick="move(this, 1, 1)"></button></td>
-                    <td><button class="gameButton" onclick="move(this, 1, 2)"></button></td>
+                    <td><button class="gameButton" onclick="move(this, 1, 0)" id="button4"></button></td>
+                    <td><button class="gameButton" onclick="move(this, 1, 1)" id="button5"></button></td>
+                    <td><button class="gameButton" onclick="move(this, 1, 2)" id="button6"></button></td>
                 </tr>
                 <tr>
-                    <td><button class="gameButton" onclick="move(this, 2, 0)"></button></td>
-                    <td><button class="gameButton" onclick="move(this, 2, 1)"></button></td>
-                    <td><button class="gameButton" onclick="move(this, 2, 2)"></button></td>
+                    <td><button class="gameButton" onclick="move(this, 2, 0)" id="button7"></button></td>
+                    <td><button class="gameButton" onclick="move(this, 2, 1)" id="button8"></button></td>
+                    <td><button class="gameButton" onclick="move(this, 2, 2)" id="button9"></button></td>
                 </tr>
             </table>
             <div id="playerSymbols"></div>
